--- a/.github/workflows/min_build.yml
+++ b/.github/workflows/min_build.yml
@@ -18,6 +18,41 @@ env:
   PYODIDE_VERSION: "0.27.7"
 
 jobs:
+  # ===========================
+  # Build Flet Flutter package
+  # ===========================
+  build_flet_package:
+    name: Build Flet Flutter package
+    runs-on: ubuntu-latest
+    outputs:
+      PKG_VER: ${{ steps.versions.outputs.PKG_VER }}
+      BUILD_VER: ${{ steps.versions.outputs.BUILD_VER }}
+      PYPI_VER: ${{ steps.versions.outputs.PYPI_VER }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   # fetch all history
+          fetch-tags: true # ensure tags are available
+
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v6
+
+      - name: Compute versions
+        id: versions
+        run: source "${SCRIPTS}/update_build_version.sh"
+
+      - name: Setup Flutter
+        uses: kuhnroyal/flutter-fvm-config-action/setup@v3
+        with:
+          path: '.fvmrc'
+          cache: true
+
+      - name: Run tests
+        shell: bash
+        working-directory: packages/flet
+        run: flutter test
+
   # =============================
   # Build Flet Client for Windows
   # =============================
@@ -25,7 +60,6 @@ jobs:
     name: Build Flet Client for Windows
     runs-on: windows-2022
     needs:
-      - python_tests
       - build_flet_package
     env:
       BUILD_VER: ${{ needs.build_flet_package.outputs.BUILD_VER }}
@@ -57,6 +91,9 @@ jobs:
         shell: bash
         working-directory: client
         run: |
+          sed -i '/--FAT_CLIENT_START--/,/--FAT_CLIENT_END--/d' pubspec.yaml
+          sed -i '/--FAT_CLIENT_START--/,/--FAT_CLIENT_END--/d' lib/main.dart
+
           flutter build windows --build-name="$BUILD_VER"
 
           # Copy needed runtime DLLs
@@ -108,8 +145,6 @@ jobs:
   build_flet_cli_desktop:
     name: Build flet, flet-cli and flet-desktop Python packages
     runs-on: ubuntu-latest
-    env:
-      PYPI_VER: ${{ needs.build_flet_package.outputs.PYPI_VER }}
     needs:
       - python_tests
       - build_flet_package
