--- a/.github/workflows/min_build.yml
+++ b/.github/workflows/min_build.yml
@@ -1,14 +1,12 @@
 name: Mini Build
 
 on:
+  schedule:
+    - cron: '0 0 * * 0'
   workflow_dispatch:
 
 permissions:
   contents: write
-
-concurrency:
-  group: ci-${{ github.workflow }}-${{ github.event.pull_request.head.ref || github.ref_name }}
-  cancel-in-progress: true
 
 env:
   ROOT: "${{ github.workspace }}"
@@ -18,73 +16,98 @@ env:
   PYODIDE_VERSION: "0.27.7"
 
 jobs:
-  # ===========================
-  # Build Flet Flutter package
-  # ===========================
-  build_flet_package:
-    name: Build Flet Flutter package
-    runs-on: ubuntu-latest
-    outputs:
-      PKG_VER: ${{ steps.versions.outputs.PKG_VER }}
-      BUILD_VER: ${{ steps.versions.outputs.BUILD_VER }}
-      PYPI_VER: ${{ steps.versions.outputs.PYPI_VER }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0   # fetch all history
-          fetch-tags: true # ensure tags are available
-
-      - name: Setup uv
-        uses: astral-sh/setup-uv@v6
-
-      - name: Compute versions
-        id: versions
-        run: source "${SCRIPTS}/update_build_version.sh"
-
-      - name: Setup Flutter
-        uses: kuhnroyal/flutter-fvm-config-action/setup@v3
-        with:
-          path: '.fvmrc'
-          cache: true
-
-      - name: Run tests
-        shell: bash
-        working-directory: packages/flet
-        run: flutter test
-
   # =============================
   # Build Flet Client for Windows
   # =============================
   build_windows:
     name: Build Flet Client for Windows
     runs-on: windows-2022
-    needs:
-      - build_flet_package
+
     env:
-      BUILD_VER: ${{ needs.build_flet_package.outputs.BUILD_VER }}
-      PYPI_VER: ${{ needs.build_flet_package.outputs.PYPI_VER }}
+      has_release: true
+      tag_name: ""
+      release_name: ""
+      remote_name: ""
+      remote_tag: ""
+      move_on: true
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
+
+      - name: Get latest release info
+        shell: bash
+        run: |
+          response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/${GITHUB_REPOSITORY}/releases/latest)
+
+          if echo "$response" | grep -q "Not Found"; then
+            echo "has_release=false" >> $GITHUB_ENV
+          else
+            echo "has_release=true" >> $GITHUB_ENV
+            echo "tag_name=$(echo "$response" | jq -r .tag_name)" >> $GITHUB_ENV
+            echo "release_name=$(echo "$response" | jq -r .name)" >> $GITHUB_ENV
+          fi
+
+      - name: Get latest repo release tag
+        shell: bash
+        run: |
+          response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/flet-dev/flet/releases/latest)
+
+          if echo "$response" | grep -q "Not Found"; then
+            echo "move_on=false" >> $GITHUB_ENV
+            exit 0
+          else
+            echo "remote_tag=$(echo "$response" | jq -r .tag_name)" >> $GITHUB_ENV
+            echo "remote_name=$(echo "$response" | jq -r .name)" >> $GITHUB_ENV
+          fi
+
+      - name: Compare release tags
+        shell: bash
+        run: |
+          echo "Github tag: ${{ env.tag_name }}"
+          echo "Remote tag: ${{ env.remote_tag }}"
+
+          if [ "${{ env.tag_name }}" = "${{ env.remote_tag }}" ]; then
+            echo "move_on=false" >> $GITHUB_ENV
+            exit 0
+          else
+            echo "⚠️ Tags differ! Compiling new version!"
+            echo "tag_name=${{ env.remote_tag }}" >> $GITHUB_ENV
+            echo "release_name=${{ env.remote_name }}" >> $GITHUB_ENV
+            exit 0
+          fi
+
+      - name: Fetch remote code
+        if: ${{ env.move_on == 'true' }}
+        shell: bash
+        run: |
+          git remote set-url origin https://github.com/flet-dev/flet.git
+          git fetch origin tag "${{ env.tag_name }}"
+          git checkout "${{ env.tag_name }}" -f
 
       - name: Setup uv
+        if: ${{ env.move_on == 'true' }}
         uses: astral-sh/setup-uv@v6
 
       - name: Setup Flutter
+        if: ${{ env.move_on == 'true' }}
         uses: kuhnroyal/flutter-fvm-config-action/setup@v3
         with:
           path: '.fvmrc'
           cache: true
 
       - name: Prepare env and patch versions
+        if: ${{ env.move_on == 'true' }}
         shell: bash
         run: |
           source "$SCRIPTS/common.sh"
           patch_python_package_versions
-          patch_toml_versions "${SDK_PYTHON}/packages/flet-desktop/pyproject.toml" "$PYPI_VER"
+          patch_toml_versions "${SDK_PYTHON}/packages/flet-desktop/pyproject.toml" "${{ env.remote_tag }}"
 
       - name: Build Flutter Windows client
+        if: ${{ env.move_on == 'true' }}
         env:
           RUNNER_DIR: ${{ env.ROOT }}/client/build/windows/x64/runner
           RELEASE_DIR: ${{ env.ROOT }}/client/build/windows/x64/runner/Release
@@ -114,6 +137,7 @@ jobs:
           cp -r "flet" "${FLET_DESKTOP_APP}/flet"
 
       - name: Build flet-desktop Python package
+        if: ${{ env.move_on == 'true' }}
         shell: bash
         run: |
           source "$SCRIPTS/common.sh"
@@ -131,75 +155,11 @@ jobs:
           done
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+        if: ${{ env.move_on == 'true' }}
+        uses: actions/upload-artifact@v5
         with:
           name: windows-artifacts
           if-no-files-found: error
           path: |
             client/flet-windows.zip
             sdk/python/dist/*.whl
-
-  # =====================================
-  # Build flet, flet-cli and flet-desktop
-  # =====================================
-  build_flet_cli_desktop:
-    name: Build flet, flet-cli and flet-desktop Python packages
-    runs-on: ubuntu-latest
-    needs:
-      - python_tests
-      - build_flet_package
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup uv
-        uses: astral-sh/setup-uv@v6
-
-      - name: Build Python packages
-        shell: bash
-        run: |
-          source "$SCRIPTS/common.sh"
-          patch_python_package_versions
-          uv build --package flet-cli
-          uv build --package flet
-          uv build --package flet-desktop --sdist
-          update_flet_wheel_deps dist
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: flet-cli-desktop-python-distribution
-          path: |
-            sdk/python/dist/*.whl
-            sdk/python/dist/*.tar.gz
-
-  # ==============
-  # GitHub Release
-  # ==============
-  release:
-    name: Publish GitHub Release
-    runs-on: ubuntu-latest
-    needs: py_publish
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: dist
-          merge-multiple: true
-
-      - name: Create/Update GitHub Release
-        uses: softprops/action-gh-release@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          name: ${{ github.ref_name }}
-          tag_name: ${{ github.ref_name }}
-          generate_release_notes: true
-          preserve_order: true
-          overwrite_files: true
-          fail_on_unmatched_files: true
-          files: |
-            dist/**/*.whl
-            dist/**/*.tar.gz
-            dist/**/*.zip
