--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -47,18 +47,10 @@ dependencies:
 dependency_overrides:
   flet:
     path: ../packages/flet
-  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^1.0.0
 
   # Docs: https://pub.dev/packages/flutter_launcher_icons
   flutter_launcher_icons: "^0.14.4"
@@ -105,7 +97,5 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 
 flutter_icons:
-  android: true
-  ios: true
-  image_path: "assets/icon/flet-ios-1024.png"
-  image_path_android: "assets/icon/flet-android-192.png"
+  android: false
+  ios: false
